--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@ a:hover{
     padding-top: 100px;
 }
 .middle-container {
-    margin: "width=device-width";
-    
+    margin: 100px 0px;
    
 }
 .bottom-container {
